--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
 <body>
     <h1>Exemple sur git</h1>
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Amet, laboriosam quo nemo necessitatibus iure non qui officiis! Dolorum, ad magnam omnis fugiat consectetur dolorem maiores nemo, rem, quos non minima.</p>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Id optio minus fugit ad molestiae temporibus cum sunt in? Dicta at iusto enim illum doloremque repellendus numquam earum officia recusandae excepturi!</p>
 </body>
 </html>
