add new file script.js

--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
+<!-- 2021-02-16 -->
+
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -11,5 +14,7 @@
     <h1>Exemple sur git</h1>
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Amet, laboriosam quo nemo necessitatibus iure non qui officiis! Dolorum, ad magnam omnis fugiat consectetur dolorem maiores nemo, rem, quos non minima.</p>
     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Id optio minus fugit ad molestiae temporibus cum sunt in? Dicta at iusto enim illum doloremque repellendus numquam earum officia recusandae excepturi!</p>
+
+    <script src="script.js"></script>
 </body>
 </html>
